fix navbar still turning white in dark mode

--- a/theme_dark.scss
+++ b/theme_dark.scss
@@ -51,3 +51,4 @@ $white-pink: #070809;
 $white-dull: #111115;
 $white-orange: #140A00;
 $white: #000000;
+$navbar-bg: $grey-blue;
